main.tf
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0
# final merge

terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "5.31.0"
    }
  }
}

provider "aws" {
 region     = "us-east-1"
}


#systemctl status apache2

#Create VPC

resource "aws_vpc" "prod-vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Prod VPC"
  }
}

#Create Internet Gateway

resource "aws_internet_gateway" "prod-ig" {
  vpc_id = aws_vpc.prod-vpc.id

  tags = {
    Name = "Prod IG"
  }
}

#Route Table

resource "aws_route_table" "prod-rt" {
  vpc_id = aws_vpc.prod-vpc.id

  route {#IPv4
    cidr_block = "0.0.0.0/0" #Point all IPv4 traffic to our internet gateway
    gateway_id = aws_internet_gateway.prod-ig.id
  }

  route {
    ipv6_cidr_block        = "::/0" #Point all IPv6 traffic to our internet gateway
    gateway_id = aws_internet_gateway.prod-ig.id
  }

  tags = {
    Name = "VPC RT"
  }
}


#Create Subnet

resource "aws_subnet" "subnet-1" {
  vpc_id     = aws_vpc.prod-vpc.id #Ref our vpc
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod-subnet"
  }
}

#Associate Subnet with Route table

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-rt.id
}

#Create Security Group to allow port 22,80,443 (SSH, HTTP, HTTPS)

resource "aws_security_group" "allow_web" {
  name        = "allow_web"
  description = "Allow Web traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

#Create network interface

resource "aws_network_interface" "web-ni" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

#Assign Elastic IP to network interface

resource "aws_eip" "one" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.web-ni.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.prod-ig, aws_instance.server]
}

#Crete Ubuntu Server with apache2

resource "aws_instance" "server" {
  ami           = "ami-0c7217cdde317cfec"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "tkey"

  tags = {
    Name = "My Terra Server"
  }

  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-ni.id
  }

  user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo Aarons web server > /var/www/html/index.html'
                EOF
}
